# sqxlab

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md
go/: .golangci.yml  BUILD.bazel  WORKSPACE  deps.bzl  docker-compose.yml  go.mod  go.sum
go/cmd/dpserver/: BUILD.bazel  main.go  root.go  screencast.go  server.go
go/internal/cdp/: BUILD.bazel  allocator_factory.go  allocator_factory_test.go  chromedp_mock.go  context_factory.go  context_factory_test.go  interface.go  mock.go  session.go  session_test.go
go/internal/config/: BUILD.bazel  root.go  screencast.go  server.go  session.go  url_discovery.go
go/internal/http/: BUILD.bazel  handlers.go  routes.go
go/internal/screencast/: BUILD.bazel  screencast.go
go/internal/telemetry/: BUILD.bazel  zerolog.go
go/internal/urls/: BUILD.bazel  interface.go  mock.go  url_discovery.go
js/: basic-screenscrape.js  package.json
