load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "cdp",
    srcs = ["session.go"],
    importpath = "github.com/stlimtat/sqxlab/go/internal/cdp",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/config",
        "@com_github_playwright_community_playwright_go//:playwright-go",
        "@com_github_rs_zerolog//:zerolog",
    ],
)
