load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "cdp",
    srcs = [
        "allocator_factory.go",
        "chromedp_mock.go",
        "context_factory.go",
        "interface.go",
        "mock.go",
        "session.go",
    ],
    importpath = "github.com/stlimtat/sqxlab/go/internal/cdp",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/config",
        "@com_github_chromedp_chromedp//:chromedp",
        "@com_github_rs_zerolog//:zerolog",
        "@org_uber_go_mock//gomock",
    ],
)

go_test(
    name = "cdp_test",
    srcs = [
        "allocator_factory_test.go",
        "context_factory_test.go",
        "session_test.go",
    ],
    embed = [":cdp"],
    deps = [
        "//internal/config",
        "//internal/urls",
        "@com_github_chromedp_chromedp//:chromedp",
        "@com_github_stretchr_testify//assert",
        "@org_uber_go_mock//gomock",
    ],
)
