load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "config",
    srcs = [
        "root.go",
        "server.go",
        "session.go",
    ],
    importpath = "github.com/stlimtat/sqxlab/go/internal/config",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/telemetry",
        "@com_github_rs_zerolog//:zerolog",
        "@com_github_spf13_viper//:viper",
    ],
)
